<resources>
    <string name="app_name">Arctouch Code Challenge</string>
    <string name="movie_and_genres">%s - %s</string>
    <string name="info_movie">Informações do filme</string>
    <string name="movie_name">Um Maluco do Pedaço</string>
    <string name="movie_date">1971</string>
    <string name="genre_label">Gênero</string>
    <string name="movie_genre_list">Ação, Suspense, Ficção científica</string>
    <string name="sinopse_label">Sinopse</string>
    <string name="movie_overview">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="title_activity_initial">Inicio</string>
    <string name="filmes_em_lancamento">Filmes em lançamento</string>
</resources>
